--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,12 +1,13 @@
 [toolchain]
 package_manager = "yarn"
+anchor_version = "0.28.0"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-merkle_distribution = "2vA1TqkN3zQ49CNwDjTf2HfLYEGKgDggPVHTprmFsYe4"
+merkle_distributor = "GCPNXuyuLqQDwpyJeFctdcYpKadWzj9ipxMNbyb7JyA4"
 
 [registry]
 url = "https://api.apr.dev"
