--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "license": "ISC",
   "scripts": {
+    "test": "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1"
+  "@coral-xyz/anchor": "0.28.0",
+    "@solana/spl-token": "^0.4.1",
+    "@solana/web3.js": "^1.91.0",
+    "@noble/hashes": "^1.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.4",
